# DIPLOMAT

./: .gitignore  .readthedocs.yaml  AUTHORS  CNAME  Dockerfile  Pipfile  README.md  RELEASE.md  RELEASE_NOTES.md  index.html  installation (1).html  installation.html  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  supplementary (1).html  supplementary.html
.github/workflows/: publish-to-pypi.yml  release-update.yml  tag-update.yml
conda-environments/: DIPLOMAT-DEEPLABCUT-CPU.yaml  DIPLOMAT-DEEPLABCUT.yaml  DIPLOMAT-NVIDIA.yaml  DIPLOMAT-SLEAP-CPU.yaml  DIPLOMAT-SLEAP.yaml  DIPLOMAT.yaml
diplomat/: __init__.py  __main__.py  _cli_runner.py  core_ops.py  frontend_ops.py  label_videos_dlc.py  predict_frames_dlc.py  predict_videos_dlc.py  predictor_ops.py
diplomat/conda-environments/: DIPLOMAT-DEEPLABCUT.yaml
diplomat/core_ops/: __init__.py
diplomat/core_ops/shared_commands/: annotate.py  save_from_restore.py  tracking.py  tweak.py  utils.py  visual_settings.py
diplomat/frontends/: __init__.py
diplomat/frontends/csv/: __init__.py  _verify_func.py  csv_utils.py  label_videos.py  tweak_results.py
diplomat/frontends/deeplabcut/: __init__.py  _verify_func.py  convert_results_dlc.py  convert_tracks.py  dlc_importer.py  label_videos_dlc.py  load_model.py  predict_frames_dlc.py  predict_videos_dlc.py  save_from_restore.py  tweak_results.py
diplomat/frontends/sleap/: __init__.py  _verify_func.py  convert_results_sleap.py  convert_tracks.py  label_videos_sleap.py  load_model.py  onnx_graph_builder.py  predict_frames_sleap.py  predict_videos_sleap.py  run_utils.py  save_from_restore.py  sleap_importer.py  sleap_imports.py  sleap_providers.py  tweak_results_sleap.py  visual_settings.py
diplomat/predictors/: argmax.py  fastplotter.py  frame_exporter.py  plotter.py
diplomat/predictors/fpe/: arr_utils.py  extra_passes.py  fpe_help.py  fpe_math.py  fpe_test_data.py  frame_pass.py  frame_pass_engine.py  frame_pass_loader.py  mit_viterbi.py  skeleton_structures.py  sparse_storage.py
diplomat/predictors/fpe/frame_passes/: cluster_frames.py  create_skeleton.py  extra_passes.py  fix_frame.py  mit_viterbi.py  optimize_std.py  repair_clusters.py
diplomat/predictors/sfpe/: assignment.py  avl_tree.py  disk_sparse_storage.py  file_io.py  growable_numpy_array.py  segmentation.py  segmented_frame_pass_engine.py
diplomat/predictors/supervised_fpe/: labelers.py  scorers.py  supervised_frame_pass_engine.py
diplomat/predictors/supervised_fpe/guilib/: fpe_editor.py  helpdialog.py  icons.py  id_swap_dialog.py  identity_swapper.py  labeler_lib.py  point_edit.py  probability_displayer.py  progress_bar.py  progress_dialog.py  score_lib.py  scroll_image_list.py  video_player.py
diplomat/predictors/supervised_sfpe/: supervised_segmented_frame_pass_engine.py
diplomat/processing/: __init__.py  containers.py  pose.py  predictor.py  progress_bar.py  track_data.py  type_casters.py
diplomat/utils/: __init__.py  _bit_or.py  _function_tools.py  cli_tools.py  clustering.py  colormaps.py  extract_frames.py  frame_store_api.py  frame_store_fmt.py  graph_ops.py  h5_frame_store_fmt.py  lazy_import.py  pluginloader.py  point_spread_patterns.py  pretty_printer.py  restore_ui.py  scipy_hungarian.py  shapes.py  track_formats.py  tweak_ui.py  video_info.py  video_io.py  video_splitter.py
diplomat/wx_gui/: __init__.py  fpe_editor.py  helpdialog.py  icons.py  id_swap_dialog.py  identity_swapper.py  labeler_lib.py  point_edit.py  probability_displayer.py  progress_bar.py  progress_dialog.py  score_lib.py  scroll_image_list.py  settings_dialog.py  video_player.py
docs/: Makefile  Pipfile  README.md  requirements.txt
docs/source/: advanced_usage.rst  basic_usage.rst  conf.py  index.rst  installation.rst  overview.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: api-template.rst  cli-entry-template.rst  cli-header-template.rst  custom-module-template.rst  frontend-template.rst  option-template.rst  plugin-template.rst  setting-template.rst
docs/source/ext/: plugin_docgen.py
tests/: README.md  test_agglomerative_clustering.py  test_avl_tree.py
