[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diplomat-track"
authors = [
    {name = "Isaac Robinson", email = "isaac.k.robinson2000@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # TODO: License
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "opencv-python",
    "matplotlib",
    "typing_extensions>=3.8",
    "tqdm",
    "PyYAML",
    "pandas",
    "numpy",
    "numba"
]

[tool.flit.module]
name = "diplomat"

[project.urls]
Source = "https://github.com/TravisWheelerLab/DIPLOMAT"

[project.scripts]
diplomat = "diplomat._cli_runner:main"

[project.optional-dependencies]
# Latest version has build issues...
gui = ["wxpython"]
dlc = ["deeplabcut[tf]"]
sleap = ["sleap[pypi]"]
all = ["wxpython", "deeplabcut==2.3.8", "sleap[pypi]==1.3.3"]

