[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diplomat-track"
authors = [
    {name = "Isaac Robinson", email = "isaac.k.robinson2000@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # TODO: License
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "opencv-python",
    "matplotlib",
    "typing_extensions>=3.8",
    "tqdm",
    "PyYAML",
    "pandas",
    "numpy",
    "numba"
]

[tool.flit.module]
name = "diplomat"

[project.urls]
Source = "https://github.com/TravisWheelerLab/DIPLOMAT"

[project.scripts]
diplomat = "diplomat._cli_runner:main"

[project.optional-dependencies]
# Latest version has build issues...
gui = ["wxpython"]
dlc = ["tensorflow", "tf2onnx", "onnx", "onnxruntime"]
dlc-nvidia = [
    "tensorflow",
    "tf2onnx",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0"
]
sleap = ["tensorflow", "tf2onnx", "onnx", "onnxruntime"]
sleap-nvidia = [
    "tensorflow",
    "tf2onnx",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0"
]
all = [
    "wxpython",
    "tensorflow",
    "tf2onnx",
    "onnx",
    "onnxruntime"
]
all-gpu = [
    "wxpython",
    "tensorflow",
    "tf2onnx",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0"
]
test = ["pytest", "scipy"]
