[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
include='diplomat/.*\.pyi?$|docs/source/.*\.pyi?$|setup.py'

[project]
name = "diplomat-track"
authors = [
    {name = "Isaac Robinson", email = "isaac.k.robinson2000@gmail.com"},
]
description="Deep learning-based Identity Preserving Labeled-Object Multi-Animal Tracking."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tracking", "ml", "computer vision", "vision"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

dependencies = [
    "opencv-python-headless",
    "matplotlib",
    "typing_extensions>=3.8",
    "tqdm",
    "PyYAML",
    "pandas",
    "numpy",
    "numba",
]
dynamic = ["version"]

[project.scripts]
diplomat = "diplomat._cli_runner:main"

[project.optional-dependencies]
gui = ["wxpython"]
sleap = [
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime>=1.19",
]
dlc = [
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime>=1.19",
]
all = [
    "wxpython",
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime>=1.19",
]
sleap-nvidia = [
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0",
]
dlc-nvidia = [
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0",
]
all-nvidia = [
    "wxpython",
    "h5py",
    "tables",
    "tensorflow",
    "tf2onnx>=1.16.1",
    "onnx",
    "onnxruntime-gpu>=1.19",
    "nvidia-cuda-nvrtc-cu12~=12.0",
    "nvidia-cuda-runtime-cu12~=12.0",
    "nvidia-cufft-cu12~=11.0",
    "nvidia-curand-cu12~=10.0",
    "nvidia-cudnn-cu12~=9.0",
]
test = ["pytest", "scipy"]

[project.urls]
homepage = "https://diplomattrack.org"
documentation = "https://diplomat.readthedocs.io"
source = "https://github.com/TravisWheelerLab/DIPLOMAT"

[tool.setuptools.dynamic]
version = {attr = "diplomat.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["diplomat"]
